feature/pagina_de_outlet

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@400&family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
   <link rel="preload" as="image" href="./icons/1.jpg">
-  <link rel="stylesheet" href="styles.css"/>
+  <link rel="stylesheet" href="./styles/styles.css"/>
 </head>
 <body>
   <header class="header">
@@ -29,7 +29,7 @@
       <ul class="nav-side nav-right">
         <li><a href="#infantil">INFANTIL</a></li>
         <li><a href="#acessorios">ACESSÓRIOS</a></li>
-        <li><a href="#outlet">OUTLET</a></li>
+        <li><a href="./outlet.html">OUTLET</a></li>
       </ul>
     </nav>
   </header>
@@ -43,8 +43,8 @@
       <h1 class="hero-title">SPORT - CELEBRE A PAIXÃO DO LEÃO DA ILHA</h1>
       <p class="hero-subtitle">Mais de 100 anos de história, tradição e glória rubro-negra</p>
       <div class="hero-cta">
-        <a href="#sobre" class="btn btn-primary">SOBRE O CLUBE</a>
-        <a href="#lancamentos" class="btn btn-secondary">LANÇAMENTOS</a>
+        <a href="#elenco" class="btn btn-primary">SOBRE O CLUBE</a>
+        <a href="./outlet.html" class="btn btn-secondary">LANÇAMENTOS</a>
       </div>
     </div>
   </main>
@@ -167,7 +167,7 @@
       <nav class="footer-col">
         <h4>INSTITUCIONAL</h4>
         <ul>
-          <li><a href="#sobre">Sobre o Clube</a></li>
+          <li><a href="#trofeus">Sobre o Clube</a></li>
           <li><a href="#socio">Seja Sócio</a></li>
           <li><a href="#noticias">Notícias</a></li>
           <li><a href="#contato">Contato</a></li>
@@ -185,10 +185,10 @@
       <div class="footer-col">
         <h4>SIGA O LEÃO</h4>
         <ul>
-          <li><a href="#instagram">Instagram</a></li>
-          <li><a href="#facebook">Facebook</a></li>
-          <li><a href="#youtube">YouTube</a></li>
-          <li><a href="#tiktok">TikTok</a></li>
+          <li><a href="https://www.instagram.com/sportrecife/?hl=pt-br">Instagram</a></li>
+          <li><a href="https://www.facebook.com/sportclubdorecife/?locale=pt_BR">Facebook</a></li>
+          <li><a href="https://www.youtube.com/@tvsportrecife">YouTube</a></li>
+          <li><a href="https://www.tiktok.com/@sportrecife">TikTok</a></li>
         </ul>
       </div>
     </div>
