feature/correcao_nome_do_style_geral

--- a/outlet.html
+++ b/outlet.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@400&family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/styles.css"/>
-  <link rel="stylesheet" href="./styles/outlet.css"/>
+  <link rel="stylesheet" href="./styles/pages.css"/>
 </head>
 <body>
   <header class="header">
