Criação da página de acessórios

--- a/acessorios.html
+++ b/acessorios.html
@@ -28,23 +28,23 @@
       </a>
       <ul class="nav-side nav-right">
         <li><a href="index.html#infantil">INFANTIL</a></li>
-        <li><a href="./acessorios.html">ACESSÓRIOS</a></li>
-        <li><a href="#outlet">OUTLET</a></li>
+        <li><a href="#acessorios">ACESSÓRIOS</a></li>
+        <li><a href="./outlet.html">OUTLET</a></li>
       </ul>
     </nav>
   </header>
 
   <section class="outlet-hero">
     <div class="outlet-hero-inner">
-      <span class="outlet-eyebrow">Outlet Oficial</span>
+      <span class="outlet-eyebrow">Acessórios Oficiais</span>
       <h1 class="outlet-title">Descontos de até 60%</h1>
-      <p class="outlet-sub">Últimas peças das temporadas recentes. Camisas oficiais, treino, lifestyle, infantil e acessórios. Estoques limitados e troca fácil.</p>
+      <p class="outlet-sub">Acessórios do Sport. Bolas, Bolsas, Mochilas, meiões e muito mais.</p>
     </div>
   </section>
 
   <div class="breadcrumbs">
     <div class="wrap">
-      <a href="index.html">Início</a> › Outlet
+      <a href="index.html">Início</a> › Acessórios
     </div>
   </div>
 
@@ -56,34 +56,10 @@
         </div>
 
         <h3 class="filter-title">Categorias</h3>
-        <div class="checkline"><input type="checkbox" id="cat-camisas"><label for="cat-camisas">Camisas Oficiais</label></div>
-        <div class="checkline"><input type="checkbox" id="cat-treino"><label for="cat-treino">Linha Treino</label></div>
-        <div class="checkline"><input type="checkbox" id="cat-lifestyle"><label for="cat-lifestyle">Lifestyle</label></div>
-        <div class="checkline"><input type="checkbox" id="cat-infantil"><label for="cat-infantil">Infantil</label></div>
-        <div class="checkline"><input type="checkbox" id="cat-acessorios"><label for="cat-acessorios">Acessórios</label></div>
+        <div class="checkline"><input type="checkbox" id="cat-camisas"><label for="cat-camisas">Bola</label></div>
+        <div class="checkline"><input type="checkbox" id="cat-treino"><label for="cat-treino">Bolsas</label></div>
+        <div class="checkline"><input type="checkbox" id="cat-lifestyle"><label for="cat-lifestyle">Meiões</label></div>
 
-        <div class="filter-group">
-          <h3 class="filter-title">Tamanhos</h3>
-          <div class="swatch-row">
-            <label class="size">PP</label>
-            <label class="size">P</label>
-            <label class="size">M</label>
-            <label class="size">G</label>
-            <label class="size">GG</label>
-            <label class="size">XG</label>
-          </div>
-        </div>
-
-        <div class="filter-group">
-          <h3 class="filter-title">Cores</h3>
-          <div class="swatch-row">
-            <span class="color-swatch" style="background:#ce0e2d"></span>
-            <span class="color-swatch" style="background:#000"></span>
-            <span class="color-swatch" style="background:#ffd400"></span>
-            <span class="color-swatch" style="background:#ffffff"></span>
-            <span class="color-swatch" style="background:#1f4fef"></span>
-          </div>
-        </div>
 
         <div class="filter-group">
           <h3 class="filter-title">Preço</h3>
@@ -131,24 +107,16 @@
       <div class="grid" id="grid">
         <article class="p-card">
           <div class="p-media">
-            <img src="./icons/outlet/camisa2526.jpg" alt="Camisa Oficial I 25/26">
+            <img src="./icons/acessorios/mochila.webp" alt="Mochila preta sport">
             <span class="badge">-40%</span>
             <span class="badge secondary">Últimas M e G</span>
           </div>
           <div class="p-body">
-            <h3 class="p-title">Camisa Oficial I 25/26</h3>
-            <div class="p-meta"><span class="stars">★★★★★</span><span>128 avaliações</span></div>
-            <div class="p-price"><span class="price-now">R$ 239,90</span><span class="price-old">R$ 399,90</span><span class="price-off">-40%</span></div>
+            <h3 class="p-title">Mochila Sport Youbag Com Bolso Térmico - Preto</h3>
+            <div class="p-meta"><span class="stars">★★★★★</span><span>148 avaliações</span></div>
+            <div class="p-price"><span class="price-now">R$ 269,90</span><span class="price-old">R$ 399,90</span><span class="price-off">-40%</span></div>
             <div class="swatches">
-              <button class="swatch" style="background:#ce0e2d" aria-checked="true"></button>
               <button class="swatch" style="background:#000"></button>
-              <button class="swatch" style="background:#ffd400"></button>
-            </div>
-            <div class="sizes">
-              <button class="size">P</button>
-              <button class="size">M</button>
-              <button class="size">G</button>
-              <button class="size" aria-disabled="true">GG</button>
             </div>
             <div class="p-actions">
               <button class="btn-buy">Adicionar</button>
@@ -159,48 +127,15 @@
 
         <article class="p-card">
           <div class="p-media">
-            <img src="./icons/outlet/camisaII2526.jpg" alt="Camisa Oficial II 25/26">
+            <img src="./icons/acessorios/bolsa-termica-vermelha.webp" alt="Bolsa termica sport">
             <span class="badge">-35%</span>
           </div>
           <div class="p-body">
-            <h3 class="p-title">Camisa Oficial II 25/26</h3>
-            <div class="p-meta"><span class="stars">★★★★☆</span><span>86 avaliações</span></div>
-            <div class="p-price"><span class="price-now">R$ 259,90</span><span class="price-old">R$ 399,90</span><span class="price-off">-35%</span></div>
-            <div class="swatches">
-              <button class="swatch" style="background:#f6ff00" aria-checked="true"></button>
-              <button class="swatch" style="background:#000"></button>
-            </div>
-            <div class="sizes">
-              <button class="size">PP</button>
-              <button class="size">P</button>
-              <button class="size">M</button>
-              <button class="size">G</button>
-            </div>
-            <div class="p-actions">
-              <button class="btn-buy">Adicionar</button>
-              <button class="btn-ghost">Favorito</button>
-            </div>
-          </div>
-        </article>
-
-        <article class="p-card">
-          <div class="p-media">
-            <img src="./icons/outlet/camisatreino.jpg" alt="Camiseta Treino Dry">
-            <span class="badge">-50%</span>
-          </div>
-          <div class="p-body">
-            <h3 class="p-title">Camiseta Treino Dry</h3>
-            <div class="p-meta"><span class="stars">★★★★☆</span><span>64 avaliações</span></div>
-            <div class="p-price"><span class="price-now">R$ 89,90</span><span class="price-old">R$ 179,90</span><span class="price-off">-50%</span></div>
+            <h3 class="p-title">Bolsa Sport Térmica Youbag - Vermelho</h3>
+            <div class="p-meta"><span class="stars">★★★★☆</span><span>254 avaliações</span></div>
+            <div class="p-price"><span class="price-now">R$ 169,90</span><span class="price-old">R$ 259,90</span><span class="price-off">-40%</span></div>
             <div class="swatches">
               <button class="swatch" style="background:#ce0e2d" aria-checked="true"></button>
-              <button class="swatch" style="background:#1f4fef"></button>
-            </div>
-            <div class="sizes">
-              <button class="size">P</button>
-              <button class="size">M</button>
-              <button class="size">G</button>
-              <button class="size">GG</button>
             </div>
             <div class="p-actions">
               <button class="btn-buy">Adicionar</button>
@@ -208,51 +143,18 @@
             </div>
           </div>
         </article>
-
+        
         <article class="p-card">
           <div class="p-media">
-            <img src="./icons/outlet/moletomumbro.jpg" alt="Moletom Umbro Diamond Essential">
-            <span class="badge">-25%</span>
+            <img src="./icons/acessorios/bone.webp" alt="Boné sport">
+            <span class="badge">-35%</span>
           </div>
           <div class="p-body">
-            <h3 class="p-title">Moletom Umbro Diamond Essential</h3>
-            <div class="p-meta"><span class="stars">★★★★★</span><span>45 avaliações</span></div>
-            <div class="p-price"><span class="price-now">R$ 224,90</span><span class="price-old">R$ 299,90</span><span class="price-off">-25%</span></div>
-            <div class="swatches">
-              <button class="swatch" style="background:#000" aria-checked="true"></button>
-              <button class="swatch" style="background:#ce0e2d"></button>
-            </div>
-            <div class="sizes">
-              <button class="size">P</button>
-              <button class="size">M</button>
-              <button class="size" aria-disabled="true">G</button>
-              <button class="size" aria-disabled="true">GG</button>
-            </div>
-            <div class="p-actions">
-              <button class="btn-buy">Adicionar</button>
-              <button class="btn-ghost">Favorito</button>
-            </div>
-          </div>
-        </article>
-
-        <article class="p-card">
-          <div class="p-media">
-            <img src="./icons/outlet/camisainfafntil.jpg" alt="Camisa Infantil Rubro-Negra">
-            <span class="badge">-30%</span>
-          </div>
-          <div class="p-body">
-            <h3 class="p-title">Camisa Infantil Rubro-Negra</h3>
-            <div class="p-meta"><span class="stars">★★★★★</span><span>31 avaliações</span></div>
-            <div class="p-price"><span class="price-now">R$ 139,90</span><span class="price-old">R$ 199,90</span><span class="price-off">-30%</span></div>
+            <h3 class="p-title">Boné Sport - Preto</h3>
+            <div class="p-meta"><span class="stars">★★★★☆</span><span>354 avaliações</span></div>
+            <div class="p-price"><span class="price-now">R$ 89,90</span><span class="price-old">R$ 119,90</span><span class="price-off">-40%</span></div>
             <div class="swatches">
               <button class="swatch" style="background:#ce0e2d" aria-checked="true"></button>
-              <button class="swatch" style="background:#000"></button>
-            </div>
-            <div class="sizes">
-              <button class="size">4</button>
-              <button class="size">6</button>
-              <button class="size">8</button>
-              <button class="size">10</button>
             </div>
             <div class="p-actions">
               <button class="btn-buy">Adicionar</button>
@@ -263,25 +165,44 @@
 
         <article class="p-card">
           <div class="p-media">
-            <img src="./icons/outlet/mochila.jpg" alt="Sacola Sport 23/24 Umbro Gym Clubes">
-            <span class="badge">-20%</span>
+            <img src="./icons/acessorios/bola-branca.webp" alt="Bola branca sport">
+            <span class="badge">-35%</span>
           </div>
           <div class="p-body">
-            <h3 class="p-title">Sacola Sport 23/24 Umbro Gym Clubes</h3>
-            <div class="p-meta"><span class="stars">★★★★☆</span><span>19 avaliações</span></div>
-            <div class="p-price"><span class="price-now">R$ 79,90</span><span class="price-old">R$ 99,90</span><span class="price-off">-20%</span></div>
+            <h3 class="p-title">Bola Campo Sport - Branca</h3>
+            <div class="p-meta"><span class="stars">★★★★☆</span><span>284 avaliações</span></div>
+            <div class="p-price"><span class="price-now">R$ 139,90</span><span class="price-old">R$ 159,90</span><span class="price-off">-20%</span></div>
             <div class="swatches">
-              <button class="swatch" style="background:#000" aria-checked="true"></button>
-              <button class="swatch" style="background:#ffd400"></button>
+              <button class="swatch" style="background:#fff" aria-checked="true"></button>
             </div>
-            <div class="sizes"></div>
             <div class="p-actions">
               <button class="btn-buy">Adicionar</button>
               <button class="btn-ghost">Favorito</button>
             </div>
           </div>
         </article>
-      </div>
+
+        <article class="p-card">
+          <div class="p-media">
+            <img src="./icons/acessorios/mini-bola.webp" alt="Mini bola preta sport">
+            <span class="badge">-35%</span>
+          </div>
+          <div class="p-body">
+            <h3 class="p-title">Mini Bola - Preta</h3>
+            <div class="p-meta"><span class="stars">★★★★☆</span><span>104 avaliações</span></div>
+            <div class="p-price"><span class="price-now">R$ 149,90</span><span class="price-old">R$ 179,90</span><span class="price-off">-25%</span></div>
+            <div class="swatches">
+              <button class="swatch" style="background:#000" aria-checked="true"></button>
+            </div>
+            <div class="p-actions">
+              <button class="btn-buy">Adicionar</button>
+              <button class="btn-ghost">Favorito</button>
+            </div>
+          </div>
+        </article>
+
+
+    </div>
 
       <div class="promo-strip">
         <span>Use o cupom <b>LEAO10</b> e ganhe 10% OFF extra em pedidos acima de R$ 299</span>
