--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </a>
       <ul class="nav-side nav-right">
         <li><a href="#infantil">INFANTIL</a></li>
-        <li><a href="#acessorios">ACESSÓRIOS</a></li>
+        <li><a href="./acessorios.html#acessorios">ACESSÓRIOS</a></li>
         <li><a href="./outlet.html">OUTLET</a></li>
       </ul>
     </nav>
