feature/div de endereço

--- a/index.html
+++ b/index.html
@@ -122,6 +122,30 @@
     </div>
   </section>
 
+  <section class="highlights" id="destaques">
+    <h2 class="section-title">Destaques</h2>
+    <div class="highlights-row">
+      <article class="highlight-card">
+        <img src="./icons/outlet/camisa2526.jpg" alt="Camisa Oficial I 25/26">
+        <h3>Camisa Oficial I 25/26</h3>
+        <p>Tecido respirável, escudo bordado e caimento clássico.</p>
+        <a href="./outlet.html" class="btn btn-secondary">Ver ofertas</a>
+      </article>
+      <article class="highlight-card">
+        <img src="./icons/outlet/moletomumbro.jpg" alt="Moletom Umbro Diamond Essential">
+        <h3>Moletom Umbro</h3>
+        <p>Conforto térmico com identidade rubro-negra para o dia a dia.</p>
+        <a href="./outlet.html" class="btn btn-secondary">Ver ofertas</a>
+      </article>
+      <article class="highlight-card">
+        <img src="./icons/acessorios/bolsa-termica-vermelha.webp" alt="Bolsa térmica vermelha Youbag">
+        <h3>Bolsa Térmica</h3>
+        <p>Prática para jogos na Ilha; mantém sua hidratação sempre à mão.</p>
+        <a href="./acessorios.html" class="btn btn-secondary">Ver acessórios</a>
+      </article>
+    </div>
+  </section>
+
   <section id="trofeus" class="trophies">
     <div class="trophies-header">
       <h2>Troféus do Leão</h2>
@@ -151,10 +175,109 @@
     </div>
   </section>
 
+  <section class="size-guide" id="tamanhos">
+    <div class="size-guide-wrap">
+      <h2 class="section-title">Guia de Tamanhos — Camisas</h2>
+      <p class="muted">Medidas aproximadas para orientar sua compra.</p>
+
+      <div class="table-wrap">
+        <table class="tabela tabela-modern">
+          <caption>Encontre seu ajuste ideal</caption>
+          <colgroup>
+            <col style="width:22%">
+            <col style="width:26%">
+            <col style="width:26%">
+            <col style="width:26%">
+          </colgroup>
+          <thead>
+            <tr>
+              <th>Tamanho</th>
+              <th>Tórax (cm)</th>
+              <th>Comprimento (cm)</th>
+              <th>Manga (cm)</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><span class="size-pill">PP</span></td>
+              <td>86–90</td><td>66–68</td><td>18–19</td>
+            </tr>
+            <tr>
+              <td><span class="size-pill">P</span></td>
+              <td>90–96</td><td>68–70</td><td>19–20</td>
+            </tr>
+            <tr>
+              <td><span class="size-pill">M</span></td>
+              <td>96–102</td><td>70–72</td><td>20–21</td>
+            </tr>
+            <tr>
+              <td><span class="size-pill">G</span></td>
+              <td>102–108</td><td>72–74</td><td>21–22</td>
+            </tr>
+            <tr>
+              <td><span class="size-pill">GG</span></td>
+              <td>108–114</td><td>74–76</td><td>22–23</td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <td colspan="4" class="tfoot-note">Dica: se ficar entre dois tamanhos, escolha o maior para caimento confortável.</td>
+            </tr>
+          </tfoot>
+        </table>
+      </div>
+    </div>
+  </section>
+
   <section id="lancamentos" class="spacer"></section>
 
   <section class="bottom-banner">
     <img src="./icons/banner.jpg" alt="Banner do Sport Club do Recife" loading="lazy"/>
+  </section>
+
+  <section class="contact" id="contato">
+    <div class="contact-wrap">
+      <h2 class="section-title">Contato</h2>
+      <div class="contact-card">
+        <div class="contact-left">
+          <div class="contact-header">
+            <img src="./icons/sport-recife-logo-escudo-1.png" alt="Escudo do Sport" class="contact-logo"/>
+            <div class="contact-titlebox">
+              <h3 class="contact-title">Loja Oficial do Sport</h3>
+              <p class="contact-subtitle">Ilha do Retiro — Recife, PE</p>
+            </div>
+          </div>
+          <div class="rating-line">
+            <span class="stars">★★★★★</span>
+            <span class="rating-number">4,3</span>
+            <span class="rating-count">(357)</span>
+          </div>
+          <div class="pill-row">
+            <span class="pill open-state">Fechado</span>
+            <span class="pill">Abre qui. às 08:00</span>
+          </div>
+          <div class="contact-info">
+            <p class="contact-label">Endereço</p>
+            <p>Av. Sport Clube do Recife, 159 — Ilha do Retiro<br>Recife — PE, 50750-500</p>
+            <p class="contact-label">Telefone</p>
+            <p><a href="tel:+5581981377232" class="contact-link">(81) 98137-7232</a></p>
+          </div>
+          <div class="contact-actions">
+            <a class="btn btn-primary" href="https://www.google.com/maps/dir/?api=1&destination=Av.%20Sport%20Clube%20do%20Recife%2C%20159%20-%20Ilha%20do%20Retiro%2C%20Recife%20-%20PE%2C%2050750-500" target="_blank" rel="noopener">Rotas</a>
+            <a class="btn btn-secondary" href="tel:+5581981377232">Ligar</a>
+          </div>
+        </div>
+        <div class="contact-right" aria-label="Mapa da loja oficial do Sport">
+          <iframe
+            title="Mapa — Loja Oficial do Sport"
+            src="https://maps.google.com/maps?q=Av.%20Sport%20Clube%20do%20Recife%2C%20159%20-%20Ilha%20do%20Retiro%2C%20Recife%20-%20PE%2C%2050750-500&t=&z=16&ie=UTF8&iwloc=&output=embed"
+            width="100%" height="100%" style="border:0;" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
+      </div>
+      <p class="map-note muted">Informações exibidas para fins acadêmicos.</p>
+    </div>
   </section>
 
   <footer class="footer">
