--- a/acessorios.html
+++ b/acessorios.html
@@ -8,12 +8,12 @@
   <meta property="og:title" content="Outlet | Sport Club do Recife">
   <meta property="og:description" content="Descontos exclusivos no Outlet do Leão. Últimas peças.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="./icons/1.jpg">
-  <link rel="icon" type="image/png" sizes="32x32" href="./icons/sport-recife-logo-escudo-1.png">
+  <meta property="og:image" content="./assets/img/1.jpg">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/sport-recife-logo-escudo-1.png">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@400&family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./styles/styles.css"/>
-  <link rel="stylesheet" href="./styles/pages.css"/>
+  <link rel="stylesheet" href="./assets/css/styles.css"/>
+  <link rel="stylesheet" href="./assets/css/pages.css"/>
 </head>
 <body>
   <header class="header">
@@ -24,7 +24,7 @@
         <li><a href="index.html#feminino">FEMININO</a></li>
       </ul>
       <a href="index.html#home" class="logo" aria-label="Sport Club do Recife - Início">
-        <img src="./icons/sport-recife-logo-escudo-1.png" alt="Sport Club do Recife" class="logo-img" width="44" height="44"/>
+        <img src="./assets/img/sport-recife-logo-escudo-1.png" alt="Sport Club do Recife" class="logo-img" width="44" height="44"/>
       </a>
       <ul class="nav-side nav-right">
         <li><a href="index.html#infantil">INFANTIL</a></li>
@@ -107,7 +107,7 @@
       <div class="grid" id="grid">
         <article class="p-card">
           <div class="p-media">
-            <img src="./icons/acessorios/mochila.webp" alt="Mochila preta sport">
+            <img src="./assets/img/acessorios/mochila.webp" alt="Mochila preta sport">
             <span class="badge">-40%</span>
             <span class="badge secondary">Últimas M e G</span>
           </div>
@@ -127,7 +127,7 @@
 
         <article class="p-card">
           <div class="p-media">
-            <img src="./icons/acessorios/bolsa-termica-vermelha.webp" alt="Bolsa termica sport">
+            <img src="./assets/img/acessorios/bolsa-termica-vermelha.webp" alt="Bolsa termica sport">
             <span class="badge">-35%</span>
           </div>
           <div class="p-body">
@@ -146,7 +146,7 @@
         
         <article class="p-card">
           <div class="p-media">
-            <img src="./icons/acessorios/bone.webp" alt="Boné sport">
+            <img src="./assets/img/acessorios/bone.webp" alt="Boné sport">
             <span class="badge">-35%</span>
           </div>
           <div class="p-body">
@@ -165,7 +165,7 @@
 
         <article class="p-card">
           <div class="p-media">
-            <img src="./icons/acessorios/bola-branca.webp" alt="Bola branca sport">
+            <img src="./assets/img/acessorios/bola-branca.webp" alt="Bola branca sport">
             <span class="badge">-35%</span>
           </div>
           <div class="p-body">
@@ -184,7 +184,7 @@
 
         <article class="p-card">
           <div class="p-media">
-            <img src="./icons/acessorios/mini-bola.webp" alt="Mini bola preta sport">
+            <img src="./assets/img/acessorios/mini-bola.webp" alt="Mini bola preta sport">
             <span class="badge">-35%</span>
           </div>
           <div class="p-body">
@@ -221,7 +221,7 @@
 
   <footer class="footer">
     <div class="footer-top">
-      <img src="./icons/sport-recife-logo-escudo-1.png" alt="Sport Club do Recife" class="footer-logo"/>
+      <img src="./assets/img/sport-recife-logo-escudo-1.png" alt="Sport Club do Recife" class="footer-logo"/>
       <p class="footer-tagline">Paixão, raça e tradição rubro-negra.</p>
       <p class="footer-copy">© 2025 Sport Club do Recife.<br/>Todos os direitos reservados.</p>
     </div>
