--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <meta property="og:title" content="Sport Club do Recife - Loja Oficial">
   <meta property="og:description" content="Paixão, raça e tradição rubro-negra. Confira lançamentos, uniformes e acessórios.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="./icons/1.jpg">
-  <link rel="icon" type="image/png" sizes="32x32" href="./icons/sport-recife-logo-escudo-1.png">
+  <meta property="og:image" content="./assets/img/1.jpg">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/sport-recife-logo-escudo-1.png">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@400&family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="./icons/1.jpg">
-  <link rel="stylesheet" href="./styles/styles.css"/>
+  <link rel="preload" as="image" href="./assets/img/1.jpg">
+  <link rel="stylesheet" href="./assets/css/styles.css"/>
 </head>
 <body>
   <header class="header">
@@ -24,7 +24,7 @@
         <li><a href="#feminino">FEMININO</a></li>
       </ul>
       <a href="#home" class="logo" aria-label="Sport Club do Recife - Início">
-        <img src="./icons/sport-recife-logo-escudo-1.png" alt="Sport Club do Recife" class="logo-img" width="44" height="44"/>
+        <img src="./assets/img/sport-recife-logo-escudo-1.png" alt="Sport Club do Recife" class="logo-img" width="44" height="44"/>
       </a>
       <ul class="nav-side nav-right">
         <li><a href="#infantil">INFANTIL</a></li>
@@ -63,22 +63,22 @@
         <div class="elenco-strip">
           <div class="elenco-page">
             <article class="player-card">
-              <img src="./icons/jogadores/thyerre.png" alt="Rafael Thyere" class="player-photo" loading="lazy"/>
+              <img src="./assets/img/jogadores/thyerre.png" alt="Rafael Thyere" class="player-photo" loading="lazy"/>
               <span class="player-number">15</span>
               <h3 class="player-name">Rafael<br/>Thyere</h3>
             </article>
             <article class="player-card">
-              <img src="./icons/jogadores/lucaslima.png" alt="Lucas Lima" class="player-photo" loading="lazy"/>
+              <img src="./assets/img/jogadores/lucaslima.png" alt="Lucas Lima" class="player-photo" loading="lazy"/>
               <span class="player-number">10</span>
               <h3 class="player-name">Lucas<br/>Lima</h3>
             </article>
             <article class="player-card">
-              <img src="./icons/jogadores/barletta.png" alt="Chrystian Barletta" class="player-photo" loading="lazy"/>
+              <img src="./assets/img/jogadores/barletta.png" alt="Chrystian Barletta" class="player-photo" loading="lazy"/>
               <span class="player-number">30</span>
               <h3 class="player-name">Chrystian<br/>Barletta</h3>
             </article>
             <article class="player-card">
-              <img src="./icons/jogadores/caiquefranca.png" alt="Caíque França" class="player-photo" loading="lazy"/>
+              <img src="./assets/img/jogadores/caiquefranca.png" alt="Caíque França" class="player-photo" loading="lazy"/>
               <span class="player-number">22</span>
               <h3 class="player-name">Caíque<br/>França</h3>
             </article>
@@ -86,22 +86,22 @@
 
           <div class="elenco-page">
             <article class="player-card">
-              <img src="./icons/jogadores/caiquefranca.png" alt="Jogador 5" class="player-photo" loading="lazy"/>
+              <img src="./assets/img/jogadores/caiquefranca.png" alt="Jogador 5" class="player-photo" loading="lazy"/>
               <span class="player-number">8</span>
               <h3 class="player-name">Jogador<br/>Cinco</h3>
             </article>
             <article class="player-card">
-              <img src="./icons/jogadores/romarinho.png" alt="Jogador 6" class="player-photo" loading="lazy"/>
+              <img src="./assets/img/jogadores/romarinho.png" alt="Jogador 6" class="player-photo" loading="lazy"/>
               <span class="player-number">91</span>
               <h3 class="player-name">Romarinho<br/></h3>
             </article>
             <article class="player-card">
-              <img src="./icons/jogadores/sergiooliveira.png" alt="Jogador 7" class="player-photo" loading="lazy"/>
+              <img src="./assets/img/jogadores/sergiooliveira.png" alt="Jogador 7" class="player-photo" loading="lazy"/>
               <span class="player-number">27</span>
               <h3 class="player-name">Sérgio<br/>Oliveira</h3>
             </article>
             <article class="player-card">
-              <img src="./icons/jogadores/derik.png" alt="Jogador 8" class="player-photo" loading="lazy"/>
+              <img src="./assets/img/jogadores/derik.png" alt="Jogador 8" class="player-photo" loading="lazy"/>
               <span class="player-number">18</span>
               <h3 class="player-name">Derik<br/>Lacerda</h3>
             </article>
@@ -126,19 +126,19 @@
     <h2 class="section-title">Destaques</h2>
     <div class="highlights-row">
       <article class="highlight-card">
-        <img src="./icons/outlet/camisa2526.jpg" alt="Camisa Oficial I 25/26">
+        <img src="./assets/img/outlet/camisa2526.jpg" alt="Camisa Oficial I 25/26">
         <h3>Camisa Oficial I 25/26</h3>
         <p>Tecido respirável, escudo bordado e caimento clássico.</p>
         <a href="./outlet.html" class="btn btn-secondary">Ver ofertas</a>
       </article>
       <article class="highlight-card">
-        <img src="./icons/outlet/moletomumbro.jpg" alt="Moletom Umbro Diamond Essential">
+        <img src="./assets/img/outlet/moletomumbro.jpg" alt="Moletom Umbro Diamond Essential">
         <h3>Moletom Umbro</h3>
         <p>Conforto térmico com identidade rubro-negra para o dia a dia.</p>
         <a href="./outlet.html" class="btn btn-secondary">Ver ofertas</a>
       </article>
       <article class="highlight-card">
-        <img src="./icons/acessorios/bolsa-termica-vermelha.webp" alt="Bolsa térmica vermelha Youbag">
+        <img src="./assets/img/acessorios/bolsa-termica-vermelha.webp" alt="Bolsa térmica vermelha Youbag">
         <h3>Bolsa Térmica</h3>
         <p>Prática para jogos na Ilha; mantém sua hidratação sempre à mão.</p>
         <a href="./acessorios.html" class="btn btn-secondary">Ver acessórios</a>
@@ -153,22 +153,22 @@
     </div>
     <div class="trophies-grid">
       <article class="trophy-card">
-        <img src="./icons/trofeu87.jpg" alt="Campeonato Brasileiro 1987" class="trophy-image" loading="lazy"/>
+        <img src="./assets/img/trofeu87.jpg" alt="Campeonato Brasileiro 1987" class="trophy-image" loading="lazy"/>
         <h3>Campeonato Brasileiro</h3>
         <p>1987</p>
       </article>
       <article class="trophy-card">
-        <img src="./icons/2008.jpg" alt="Copa do Brasil 2008" class="trophy-image" loading="lazy"/>
+        <img src="./assets/img/2008.jpg" alt="Copa do Brasil 2008" class="trophy-image" loading="lazy"/>
         <h3>Copa do Brasil</h3>
         <p>2008</p>
       </article>
       <article class="trophy-card">
-        <img src="./icons/1990.jpg" alt="Campeonato Brasileiro Série B 1990" class="trophy-image" loading="lazy"/>
+        <img src="./assets/img/1990.jpg" alt="Campeonato Brasileiro Série B 1990" class="trophy-image" loading="lazy"/>
         <h3>Campeonato Brasileiro Série B</h3>
         <p>1990</p>
       </article>
       <article class="trophy-card">
-        <img src="./icons/copadonordeste.jpg" alt="Copa do Nordeste 1994, 2000, 2014" class="trophy-image" loading="lazy"/>
+        <img src="./assets/img/copadonordeste.jpg" alt="Copa do Nordeste 1994, 2000, 2014" class="trophy-image" loading="lazy"/>
         <h3>Copa do Nordeste</h3>
         <p>1994, 2000, 2014</p>
       </article>
@@ -232,7 +232,7 @@
   <section id="lancamentos" class="spacer"></section>
 
   <section class="bottom-banner">
-    <img src="./icons/banner.jpg" alt="Banner do Sport Club do Recife" loading="lazy"/>
+    <img src="./assets/img/banner.jpg" alt="Banner do Sport Club do Recife" loading="lazy"/>
   </section>
 
   <section class="contact" id="contato">
@@ -241,7 +241,7 @@
       <div class="contact-card">
         <div class="contact-left">
           <div class="contact-header">
-            <img src="./icons/sport-recife-logo-escudo-1.png" alt="Escudo do Sport" class="contact-logo"/>
+            <img src="./assets/img/sport-recife-logo-escudo-1.png" alt="Escudo do Sport" class="contact-logo"/>
             <div class="contact-titlebox">
               <h3 class="contact-title">Loja Oficial do Sport</h3>
               <p class="contact-subtitle">Ilha do Retiro — Recife, PE</p>
@@ -282,7 +282,7 @@
 
   <footer class="footer">
     <div class="footer-top">
-      <img src="./icons/sport-recife-logo-escudo-1.png" alt="Sport Club do Recife" class="footer-logo" loading="lazy"/>
+      <img src="./assets/img/sport-recife-logo-escudo-1.png" alt="Sport Club do Recife" class="footer-logo" loading="lazy"/>
       <p class="footer-tagline">Paixão, raça e tradição rubro-negra.</p>
       <p class="footer-copy">© 2025 Sport Club do Recife.<br/>Todos os direitos reservados.</p>
     </div>
