--- a/outlet.html
+++ b/outlet.html
@@ -8,12 +8,12 @@
   <meta property="og:title" content="Outlet | Sport Club do Recife">
   <meta property="og:description" content="Descontos exclusivos no Outlet do Leão. Últimas peças.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="./icons/1.jpg">
-  <link rel="icon" type="image/png" sizes="32x32" href="./icons/sport-recife-logo-escudo-1.png">
+  <meta property="og:image" content="./assets/img/1.jpg">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/sport-recife-logo-escudo-1.png">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@400&family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./styles/styles.css"/>
-  <link rel="stylesheet" href="./styles/pages.css"/>
+  <link rel="stylesheet" href="./assets/css/styles.css"/>
+  <link rel="stylesheet" href="./assets/css/pages.css"/>
 </head>
 <body>
   <header class="header">
@@ -24,7 +24,7 @@
         <li><a href="index.html#feminino">FEMININO</a></li>
       </ul>
       <a href="index.html#home" class="logo" aria-label="Sport Club do Recife - Início">
-        <img src="./icons/sport-recife-logo-escudo-1.png" alt="Sport Club do Recife" class="logo-img" width="44" height="44"/>
+        <img src="./assets/img/sport-recife-logo-escudo-1.png" alt="Sport Club do Recife" class="logo-img" width="44" height="44"/>
       </a>
       <ul class="nav-side nav-right">
         <li><a href="index.html#infantil">INFANTIL</a></li>
@@ -131,7 +131,7 @@
       <div class="grid" id="grid">
         <article class="p-card">
           <div class="p-media">
-            <img src="./icons/outlet/camisa2526.jpg" alt="Camisa Oficial I 25/26">
+            <img src="./assets/img/outlet/camisa2526.jpg" alt="Camisa Oficial I 25/26">
             <span class="badge">-40%</span>
             <span class="badge secondary">Últimas M e G</span>
           </div>
@@ -159,7 +159,7 @@
 
         <article class="p-card">
           <div class="p-media">
-            <img src="./icons/outlet/camisaII2526.jpg" alt="Camisa Oficial II 25/26">
+            <img src="./assets/img/outlet/camisaII2526.jpg" alt="Camisa Oficial II 25/26">
             <span class="badge">-35%</span>
           </div>
           <div class="p-body">
@@ -185,7 +185,7 @@
 
         <article class="p-card">
           <div class="p-media">
-            <img src="./icons/outlet/camisatreino.jpg" alt="Camiseta Treino Dry">
+            <img src="./assets/img/outlet/camisatreino.jpg" alt="Camiseta Treino Dry">
             <span class="badge">-50%</span>
           </div>
           <div class="p-body">
@@ -211,7 +211,7 @@
 
         <article class="p-card">
           <div class="p-media">
-            <img src="./icons/outlet/moletomumbro.jpg" alt="Moletom Umbro Diamond Essential">
+            <img src="./assets/img/outlet/moletomumbro.jpg" alt="Moletom Umbro Diamond Essential">
             <span class="badge">-25%</span>
           </div>
           <div class="p-body">
@@ -237,7 +237,7 @@
 
         <article class="p-card">
           <div class="p-media">
-            <img src="./icons/outlet/camisainfafntil.jpg" alt="Camisa Infantil Rubro-Negra">
+            <img src="./assets/img/outlet/camisainfafntil.jpg" alt="Camisa Infantil Rubro-Negra">
             <span class="badge">-30%</span>
           </div>
           <div class="p-body">
@@ -263,7 +263,7 @@
 
         <article class="p-card">
           <div class="p-media">
-            <img src="./icons/outlet/mochila.jpg" alt="Sacola Sport 23/24 Umbro Gym Clubes">
+            <img src="./assets/img/outlet/mochila.jpg" alt="Sacola Sport 23/24 Umbro Gym Clubes">
             <span class="badge">-20%</span>
           </div>
           <div class="p-body">
@@ -300,7 +300,7 @@
 
   <footer class="footer">
     <div class="footer-top">
-      <img src="./icons/sport-recife-logo-escudo-1.png" alt="Sport Club do Recife" class="footer-logo"/>
+      <img src="./assets/img/sport-recife-logo-escudo-1.png" alt="Sport Club do Recife" class="footer-logo"/>
       <p class="footer-tagline">Paixão, raça e tradição rubro-negra.</p>
       <p class="footer-copy">© 2025 Sport Club do Recife.<br/>Todos os direitos reservados.</p>
     </div>
