aba masculina e feminina

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <nav class="nav">
       <ul class="nav-side nav-left">
         <li><a href="#lancamentos">LANÇAMENTOS</a></li>
-        <li><a href="#masculino">MASCULINO</a></li>
-        <li><a href="#feminino">FEMININO</a></li>
+        <li><a href="masculino.html">MASCULINO</a></li>
+        <li><a href="feminino.html">FEMININO</a></li>
       </ul>
       <a href="#home" class="logo" aria-label="Sport Club do Recife - Início">
         <img src="./assets/img/sport-recife-logo-escudo-1.png" alt="Sport Club do Recife" class="logo-img" width="44" height="44"/>
